src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>AcceptDeclineWaiver__c</fullName>
        <label>AcceptDeclineWaiver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I accept.</fullName>
                </value>
                <value>
                    <fullName>I decline.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_To_TY_Message__c</fullName>
        <description>Text that will be inserted as the first paragraph in the TY message.</description>
        <inlineHelpText>Text that will be inserted as the first paragraph in the TY message.</inlineHelpText>
        <label>Add To TY Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Addressee__c</fullName>
        <description>For mail merge lists that contain Leads and Contacts.  Pulled from the Contact&apos;s Account info or from the Lead&apos;s info depending on the member type.</description>
        <formula>IF(  ISBLANK(Contact.LastName) ,  Lead.Addressee__c ,  Contact.Account.Addressee__c )</formula>
        <label>Addressee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreed_to_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreed_to_Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutosendTY__c</fullName>
        <description>Whether or not to send the thank you message automatically. If the value is already set to &quot;sent,&quot; the message won&apos;t go out.</description>
        <inlineHelpText>Whether or not to send the thank you message automatically. If the value is already set to &quot;sent,&quot; the message won&apos;t go out.</inlineHelpText>
        <label>AutosendTY</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                    <default>true</default>
                    <label>none</label>
                </value>
                <value>
                    <fullName>send</fullName>
                </value>
                <value>
                    <fullName>sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Autosend_TY_Msg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should WaterGrass automatically send  thank you message to this volunteer, including the custom paragraph if there is one, when you synchronize the database?</description>
        <inlineHelpText>Should WaterGrass automatically send  thank you message to this volunteer, including the custom paragraph if there is one, when you synchronize the database?</inlineHelpText>
        <label>Autosend_TY_Msg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Boat__c</fullName>
        <label>Boat</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampRTAndType__c</fullName>
        <description>Concatenate CM.Campaign.RecordType.Name and CM.Campaign.Type for use in workflows</description>
        <formula>Campaign.RecordType.DeveloperName + &apos; &apos; +  TEXT(Campaign.Type)</formula>
        <inlineHelpText>Concatenate CM.Campaign.RecordType.Name and CM.Campaign.Type for use in workflows</inlineHelpText>
        <label>CampRTAndType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Source__c</fullName>
        <label>Campaign_Member_Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web signup</fullName>
                </value>
                <value>
                    <fullName>From attendance list</fullName>
                </value>
                <value>
                    <fullName>Manual entry</fullName>
                </value>
                <value>
                    <fullName>Select by database query</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Car_pooling__c</fullName>
        <label>Car pooling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I will need a ride with the team.</fullName>
                </value>
                <value>
                    <fullName>My car is full.</fullName>
                </value>
                <value>
                    <fullName>I have room for people in my vehicle.</fullName>
                </value>
                <value>
                    <fullName>Other (Please describe in comment box below.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>IF( Contact.Account.BillingCity = null, Lead.City, Contact.Account.BillingCity)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Constant1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constant1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dear__c</fullName>
        <formula>IF( ISBLANK(Contact.FirstName) , Lead.Dear__c , Contact.Account.Dear__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dear</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dietary_Restrictions__c</fullName>
        <inlineHelpText>Please describe any dietary restrictions you have.</inlineHelpText>
        <label>Dietary Restrictions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>IF( Contact.Email = null, Lead.Email, Contact.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <label>Emergency Contact Name</label>
        <length>122</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <description>Pulls event date from Campaign Event Date Time field, then is used to trigger time dependent workflow emails for volunteer events.</description>
        <formula>Campaign.Event_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls event date from Campaign Event Date Time field, then is used to trigger time dependent workflow emails for volunteer events.</inlineHelpText>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Task__c</fullName>
        <description>Task assigned by default to the event owner; can be reassigned to other people in the organization.</description>
        <inlineHelpText>Task assigned by default to the event owner; can be reassigned to other people in the organization.</inlineHelpText>
        <label>Follow Up Task</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HoursValue__c</fullName>
        <label>HoursValue</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_Heard_About_Event__c</fullName>
        <label>How_Heard_About_Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>From the email newsletter</fullName>
                </value>
                <value>
                    <fullName>From the printer newsletter</fullName>
                </value>
                <value>
                    <fullName>From the website</fullName>
                </value>
                <value>
                    <fullName>From a staff member</fullName>
                </value>
                <value>
                    <fullName>From a friend or acquaintance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <description>What brought the participant to the event?</description>
        <inlineHelpText>What brought the participant to the event?</inlineHelpText>
        <label>Interests</label>
        <length>252</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invite_to_Next_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invite this participant to the follow up cultivation event.</description>
        <inlineHelpText>Invite this participant to the follow up cultivation event.</inlineHelpText>
        <label>Invite_to_Next_Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leadership_Level__c</fullName>
        <label>Leadership Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Volunteer</fullName>
                </value>
                <value>
                    <fullName>2 - Leader</fullName>
                </value>
                <value>
                    <fullName>3 - Leader of leaders (Organized the event or similar)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mail_Merge_Street_Address__c</fullName>
        <description>Uses the Account Billing Street field if member is a Contact or the Lead Street if a Lead.</description>
        <formula>IF( ISBLANK(Contact.LastName) ,  Lead.Street  ,  Contact.Account.BillingStreet  )</formula>
        <label>Mail Merge Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nr_Adults__c</fullName>
        <label>Nr_Adults</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nr_in_Group__c</fullName>
        <label>Nr_in_Group</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Photo_Title__c</fullName>
        <description>Caption for the photo of the participant</description>
        <inlineHelpText>Caption for the photo of the participant</inlineHelpText>
        <label>Photo Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_URL__c</fullName>
        <description>Photo of this participant, stored on the web.</description>
        <inlineHelpText>Photo of this participant, stored on the web.</inlineHelpText>
        <label>Photo_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <formula>IF( Contact.Account.BillingPostalCode = null, Lead.PostalCode, Contact.Account.BillingPostalCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PostalCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pref_Location__c</fullName>
        <description>Do you have a particular location you&apos;d prefer?</description>
        <inlineHelpText>Do you have a particular location you&apos;d prefer?</inlineHelpText>
        <label>Pref_Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this campaign member has had a donation of volunteer hours assigned for its participation, using the PostEventHours Controller.</description>
        <inlineHelpText>If this is &quot;true,&quot; the Assign Hours Post Event won&apos;t touch this record.</inlineHelpText>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality_of_Supervisor_Support__c</fullName>
        <description>Did your supervisor give you good directions and support in order to do your volunteer task?</description>
        <inlineHelpText>Did your supervisor give you good directions and support in order to do your volunteer task?</inlineHelpText>
        <label>Quality of Supervisor Support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Not at all</fullName>
                </value>
                <value>
                    <fullName>2 - Not completely</fullName>
                </value>
                <value>
                    <fullName>3 - It was adequate.</fullName>
                </value>
                <value>
                    <fullName>4 - Yes</fullName>
                </value>
                <value>
                    <fullName>5 - Enthusiastic yes!</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questions_or_Comments__c</fullName>
        <description>Questions, comments, expectations, needs, explanations</description>
        <inlineHelpText>Questions, comments, expectations, needs, explanations</inlineHelpText>
        <label>Questions or Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <description>Body of the post request from the app,</description>
        <inlineHelpText>Body of the post request from the app,</inlineHelpText>
        <label>Request Body</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Site captain</fullName>
                </value>
                <value>
                    <fullName>Group leader</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                    <default>true</default>
                    <label>Volunteer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Member_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Member Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shirt_Size__c</fullName>
        <label>Shirt Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>XXL</fullName>
                </value>
                <value>
                    <fullName>XL</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>XS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SignaturePDFId__c</fullName>
        <description>The Id of the attachment record for the image of the campaign member&apos;s signature.  Stored under the Contact.</description>
        <inlineHelpText>The Id of the attachment record for the image of the campaign member&apos;s signature.  Stored under the Contact.</inlineHelpText>
        <label>SignaturePDFId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignupQuestionAnswer2__c</fullName>
        <label>Signup Question Answer 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SignupQuestionAnswer__c</fullName>
        <label>Signup Question Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Location_Preference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the campaign member requires or prefers a special location-related quality, like unbrambly or even ground.</description>
        <inlineHelpText>Whether the campaign member requires or prefers a special location-related quality, like unbrambly or even ground.</inlineHelpText>
        <label>Special_Location_Preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Needs__c</fullName>
        <label>Special_Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>IF( Contact.Account.BillingState = null, Lead.State, Contact.Account.BillingState)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <formula>IF( Contact.Account.BillingStreet = null, Lead.Street, Contact.Account.BillingStreet)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Satisfaction__c</fullName>
        <description>Same as similar field in Opportunity.  This field was created for the case that a supervisor wanted to rate a volunteer without giving them hours.  0 poor to 4 outstanding.</description>
        <inlineHelpText>0 poor to 4 outstanding.</inlineHelpText>
        <label>Supervisor_Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teammates__c</fullName>
        <description>Full names of people on your team and their ages.  All adults should register separately.</description>
        <inlineHelpText>Full names of people on your team and their ages.  All adults should register separately.</inlineHelpText>
        <label>Teammates</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TempAndroidId__c</fullName>
        <description>Used by WG SignIn app</description>
        <inlineHelpText>Used by WG SignIn app</inlineHelpText>
        <label>TempAndroidId</label>
        <length>252</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To_Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unsubscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If a volunteer unsubscribes in their volunteer portal, set this field to true.  If the resubscribe, unset it.</description>
        <inlineHelpText>If a volunteer unsubscribes in their volunteer portal, set this field to true.  If the resubscribe, unset it.</inlineHelpText>
        <label>Unsubscribed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Narrative_Feedback__c</fullName>
        <description>Feedback from the volunteer about the event.</description>
        <inlineHelpText>Feedback from the volunteer about the event.</inlineHelpText>
        <label>Volunteer_Narrative_Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Waders__c</fullName>
        <label>Waders</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4.5 mens / 6 womens</fullName>
                </value>
                <value>
                    <fullName>5.5 mens / 7 womens</fullName>
                </value>
                <value>
                    <fullName>6 mens / 7.5 womens</fullName>
                </value>
                <value>
                    <fullName>7 mens / 8.5 womens</fullName>
                </value>
                <value>
                    <fullName>8 mens / 9.5 womens</fullName>
                </value>
                <value>
                    <fullName>9 mens / 10.5 womens</fullName>
                </value>
                <value>
                    <fullName>10 mens / 11.5 womens</fullName>
                </value>
                <value>
                    <fullName>11 mens / 12.5 womens</fullName>
                </value>
                <value>
                    <fullName>12 mens</fullName>
                </value>
                <value>
                    <fullName>13 mens</fullName>
                </value>
                <value>
                    <fullName>I will use my own waders.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_Waiver_Agreed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Which Waiver Agreed</label>
        <referenceTo>Text_Document__c</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>